Fix misalignment in modal titles

--- a/wonder/romeo/static/scss/specifics/video/_video-edit-collections.scss
+++ b/wonder/romeo/static/scss/specifics/video/_video-edit-collections.scss
@@ -113,15 +113,15 @@
 .modal__title {
 
   .video-edit-collections__assigned-tags {
+    display: inline-block;
+    vertical-align: middle;
     margin: 0;
+    margin-left: 12px;
+    padding-top: 0;
+    position: relative;
+    top: -2px;
     float: left;
     text-align: left;
-    font-size: 14px;
-    font-weight: bold;
-    vertical-align: middle;
-    display: inline-block;
-    padding-top: 8px;
-    margin-left: 12px;
   }
 }
 
